Made UI better, along with added padding and player cards seem more coherent.

--- a/fpl-live/src/index.css
+++ b/fpl-live/src/index.css
@@ -4,5 +4,6 @@
 
 
 body {
-    @apply bg-gray-50 text-zinc-900 font-fpl;
+    /* Purple site background to match FPL aesthetic */
+    @apply bg-fplPurple font-fpl;
 }
